--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Color-Boxes</title>
   </head>
-  <body>
+  <body onload="quarter()">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -40,4 +40,14 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script>
+      function quarter() {
+    // window.resizeTo(
+    //   window.screen.availWidth / 2,
+    //   window.screen.availHeight / 2
+    // );
+    window.resizeTo(screen.width-1536,screen.height-864)
+  }
+  window.onbeforeunload=quarter;
+  </script>
 </html>
